@@ -1,3 +1,9 @@
+2001-05-29  Tambet Ingo  <tambet@ximian.com>
+
+	* users-conf.in (change_user_chfn): Implement. use chfn to set finger infromation.
+	(add_user): use (change_user_chfn).
+	(change_user): ditto.
+
 2001-05-28  Tambet Ingo  <tambet@ximian.com>
 
 	* boot.pl.in (xst_boot_parse_images): Preserve leading spaces of images.
